Renommer CustomVectorIndexer => CustomStringIndexer

--- a/02-spark-estimators-transformers.ipynb
+++ b/02-spark-estimators-transformers.ipynb
@@ -109,8 +109,8 @@
     {
      "data": {
       "text/plain": [
-       "import com.spark.feature.CustomVectorIndexer\r\n",
-       "vectorizer: com.spark.feature.CustomVectorIndexer = cstri_c594ef59ac00\r\n"
+       "import feature.CustomStringIndexer\r\n",
+       "indexer: feature.CustomStringIndexer = cstri_383fc9739cb5\r\n"
       ]
      },
      "execution_count": 3,
@@ -119,12 +119,12 @@
     }
    ],
    "source": [
-    "import feature.CustomVectorIndexer\n",
-    "val vectorizer = new CustomVectorIndexer()\n",
+    "import feature.CustomStringIndexer\n",
+    "val indexer = new CustomStringIndexer()\n",
     "                  .setInputCol(\"department\")\n",
     "                  .setOutputCol(\"departmentIndex\")\n",
     "\n",
-    "vectorizer.fit(df).transform(df).show()"
+    "indexer.fit(df).transform(df).show()"
    ]
   },
   {
@@ -135,7 +135,7 @@
     {
      "data": {
       "text/plain": [
-       "model: com.spark.feature.CustomVectorIndexerModel = CustomVectorIndexerModel: uid=cstri_c594ef59ac00\r\n"
+       "model: feature.CustomStringIndexerModel = CustomStringIndexerModel: uid=cstri_383fc9739cb5\r\n"
       ]
      },
      "execution_count": 4,
@@ -144,7 +144,7 @@
     }
    ],
    "source": [
-    "val model = vectorizer.fit(df)\n",
+    "val model = indexer.fit(df)\n",
     "model.write.overwrite().save(\"spark-model\")"
    ]
   },
@@ -177,8 +177,8 @@
     {
      "data": {
       "text/plain": [
-       "import com.spark.feature.CustomVectorIndexerModel\r\n",
-       "modelLoaded: com.spark.feature.CustomVectorIndexerModel = CustomVectorIndexerModel: uid=cstri_c594ef59ac00\r\n"
+       "import feature.CustomStringIndexerModel\r\n",
+       "modelLoaded: feature.CustomStringIndexerModel = CustomStringIndexerModel: uid=cstri_383fc9739cb5\r\n"
       ]
      },
      "execution_count": 5,
@@ -187,8 +187,8 @@
     }
    ],
    "source": [
-    "import com.spark.feature.CustomVectorIndexerModel\n",
-    "val modelLoaded = CustomVectorIndexerModel.load(\"spark-model\")\n",
+    "import feature.CustomStringIndexerModel\n",
+    "val modelLoaded = CustomStringIndexerModel.load(\"spark-model\")\n",
     "modelLoaded.transform(df).show()"
    ]
   },
@@ -228,9 +228,9 @@
     {
      "data": {
       "text/plain": [
-       "import com.spark.feature.ColumnFilter\r\n",
-       "filter: com.spark.feature.ColumnFilter =\r\n",
-       "ColumnFilter: uid=colfilter_10267ade0a7a\r\n",
+       "import feature.ColumnFilter\r\n",
+       "filter: feature.ColumnFilter =\r\n",
+       "ColumnFilter: uid=colfilter_0776de12ebcd\r\n",
        "Drop: salary\r\n"
       ]
      },
@@ -283,8 +283,8 @@
     {
      "data": {
       "text/plain": [
-       "transLoad: com.spark.feature.ColumnFilter =\r\n",
-       "ColumnFilter: uid=colfilter_10267ade0a7a\r\n",
+       "transLoad: feature.ColumnFilter =\r\n",
+       "ColumnFilter: uid=colfilter_0776de12ebcd\r\n",
        "Drop: salary\r\n"
       ]
      },
@@ -335,12 +335,12 @@
      "data": {
       "text/plain": [
        "import org.apache.spark.ml.Pipeline\r\n",
-       "vectorizer: com.spark.feature.CustomVectorIndexer = cstri_bc5f343c8bb9\r\n",
-       "filter: com.spark.feature.ColumnFilter =\r\n",
-       "ColumnFilter: uid=colfilter_62b961de51eb\r\n",
+       "indexer: feature.CustomStringIndexer = cstri_9bb58bd35519\r\n",
+       "filter: feature.ColumnFilter =\r\n",
+       "ColumnFilter: uid=colfilter_82bde31a7e32\r\n",
        "Drop: department\r\n",
-       "pipeline: org.apache.spark.ml.Pipeline = pipeline_6610dfab7bb8\r\n",
-       "model: org.apache.spark.ml.PipelineModel = pipeline_6610dfab7bb8\r\n"
+       "pipeline: org.apache.spark.ml.Pipeline = pipeline_fdc2fa30ea6f\r\n",
+       "model: org.apache.spark.ml.PipelineModel = pipeline_fdc2fa30ea6f\r\n"
       ]
      },
      "execution_count": 9,
@@ -351,14 +351,14 @@
    "source": [
     "import org.apache.spark.ml.Pipeline\n",
     "\n",
-    "val vectorizer = new CustomVectorIndexer()\n",
+    "val indexer = new CustomStringIndexer()\n",
     "                  .setInputCol(\"department\")\n",
     "                  .setOutputCol(\"departmentIndex\")\n",
     "\n",
     "val filter = new ColumnFilter().setDropCols(\"department\")\n",
     "\n",
     "val pipeline = new Pipeline()\n",
-    "              .setStages(Array(vectorizer, filter))\n",
+    "              .setStages(Array(indexer, filter))\n",
     "\n",
     "val model = pipeline.fit(df)\n",
     "\n",
