--- a/03-pyspark-custom-estimators-from-scala.ipynb
+++ b/03-pyspark-custom-estimators-from-scala.ipynb
@@ -35,7 +35,7 @@
     "conf = SparkConf().setAppName('Exple')\n",
     "spark = SparkSession.builder.config(conf=conf).getOrCreate()\n",
     "\n",
-    "from feature import ColumnFilter, CustomVectorIndexer, CustomVectorIndexerModel"
+    "from feature import ColumnFilter, CustomStringIndexer, CustomStringIndexerModel"
    ]
   },
   {
@@ -132,8 +132,8 @@
     }
    ],
    "source": [
-    "vectorizer = CustomVectorIndexer().setInputCol('CATEGORY').setOutputCol('CATEGORY_INDEX')\n",
-    "model  = vectorizer.fit(dfm)\n",
+    "indexer = CustomStringIndexer().setInputCol('CATEGORY').setOutputCol('CATEGORY_INDEX')\n",
+    "model  = indexer.fit(dfm)\n",
     "model.transform(dfm).show(truncate=False)"
    ]
   },
@@ -156,13 +156,6 @@
    "source": [
     "model.mapping_cat"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
